--- a/clamd.conf
+++ b/clamd.conf
@@ -1,12 +1,12 @@
 DatabaseDirectory /mnt/efs/clam
-LogFile /var/log/clamd.log
+LogFile /tmp/clamd.log
 LogTime yes
 LogFileUnlock yes
 LogFileMaxSize 0
 LogSyslog yes
 LogFacility LOG_LOCAL6
 LogVerbose yes
-PidFile /var/run/clamd.pid
+PidFile /tmp/clamd.pid
 TemporaryDirectory /tmp
 DatabaseOwner clamav
 MaxThreads 12
