--- a/freshclam.conf
+++ b/freshclam.conf
@@ -1,5 +1,5 @@
 DatabaseDirectory /mnt/efs/clam
-UpdateLogFile /var/log/freshclam.log
+UpdateLogFile /tmp/freshclam.log
 LogTime yes
 LogSyslog yes
 LogFacility LOG_LOCAL6
